# idu_api

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  db.env.example  docker-compose.yaml  keycloak.env.example  logrotate.conf.example  migrations.Dockerfile  pyproject copy.toml  pyproject.toml  run_test.sh
.github/workflows/: build_and_deploy_urban_api.yaml  deploy.yml
city_api/: Dockerfile  README.md  docker-compose.yaml
duty/scripts/fix_geometries/: main.py
duty/scripts/regenerate_projects_context/: main.py
duty/scripts/regenerate_projects_previews/: main.py
duty/scripts/update_minio_projects_bucket/: main.py
idu_api/: __init__.py
idu_api/city_api/: __init__.py  main.py
idu_api/city_api/common/: __init__.py  feature.py  mapper.py
idu_api/city_api/controllers/: administrative_unit.py  administrative_units.py  blocks.py  cities.py  city.py  municipalities.py  municipality.py  territory_level.py
idu_api/city_api/dto/: administrative_units.py  base.py  blocks.py  munipalities.py  physical_objects.py  services.py  services_count.py  territory.py  territory_base.py  territory_hierarchy.py  territory_level.py
idu_api/city_api/schemas/: adminstrative_units.py  blocks.py  municipalities.py  service_types.py  service_types_counts.py  territory.py  territory_hierarchy.py  territory_level.py
idu_api/common/db/: alembic.ini  config.py
idu_api/urban_api/: __init__.py  __main__.py  config.py  fastapi_init.py  version.py
idu_api/urban_api/dto/: __init__.py  buffers.py  buildings.py  functional_zones.py  hexagons.py  indicators.py  living_buildings.py  normatives.py  object_geometries.py  pages.py  physical_object_types.py  physical_objects.py  profiles.py  profiles_reclamation.py  projects.py  scenarios.py  scenarios_urban_objects.py  service_types.py  services.py  soc_groups.py  territories.py  urban_objects.py
idu_api/urban_api/exceptions/: __init__.py  base.py
idu_api/urban_api/handlers/: __init__.py  broker.py  health_check.py  routers.py  system.py
idu_api/urban_api/logic/: buffers.py  functional_zones.py  indicators.py  object_geometries.py  physical_object_types.py  physical_objects.py  projects.py  service_types.py  services.py  soc_groups.py  system.py  territories.py  urban_objects.py
idu_api/urban_api/middlewares/: authentication.py  dependency_injection.py  exception_handler.py  logging.py
idu_api/urban_api/minio/: __init__.py  client.py
idu_api/urban_api/prometheus/: __init__.py  metrics.py  server.py
idu_api/urban_api/schemas/: __init__.py  basic_responses.py  buffers.py  buildings.py  enums.py  functional_zones.py  geometries.py  health_check.py  hexagons.py  indicators.py  living_buildings.py  minio.py  normatives.py  object_geometries.py  pages.py  physical_object_types.py  physical_objects.py  profiles.py  profiles_reclamation.py  projects.py  projects_functional_zones.py  projects_indicators.py  scenarios.py  scenarios_urban_objects.py  service_types.py  services.py  short_models.py  soc_groups.py  territories.py  urban_objects.py
idu_api/urban_api/utils/: auth_client.py  broker.py  dependencies.py  logging.py  minio_client.py  pagination.py  query_filters.py
tests/urban_api/: __init__.py  conftest.py  test_swagger.py  validate_geometry.py
tests/urban_api/helpers/: __init__.py  auth.py  broker.py  buffers.py  buildings.py  connection.py  functional_zones.py  geometries.py  hexagons.py  indicators.py  living_buildings.py  logging.py  minio_client.py  normatives.py  object_geometries.py  physical_object_types.py  physical_objects.py  projects.py  samples.py  scenarios.py  service_types.py  (+5 more)
urban_api/: .env.example  .gitignore  Dockerfile  README.md  __init__.py  __main__.py  config.py  db.env.example  docker-compose.deploy.yaml  docker-compose.yaml  fastapi_init.py  minio.env.example  urban-api.config.yaml.example  version.py
urban_api/config/: __init__.py  app_settings_global.py
urban_api/db/: __init__.py  alembic.ini
urban_api/dto/: __init__.py  functional_zones.py  indicators.py  living_buildings.py  object_geometries.py  physical_objects.py  service_types.py  services.py  territories.py
urban_api/endpoints/: __init__.py  health_check.py  redirect_to_swagger.py  routers.py  territories.py
urban_api/exceptions/: __init__.py  base.py
urban_api/handlers/: routers.py
urban_api/logic/: __init__.py  indicators.py  object_geometries.py  physical_objects.py  service_types.py  services.py  territories.py
urban_api/middlewares/: __init__.py  dependency_injection.py
urban_api/schemas/: __init__.py  basic_responses.py  enums.py  functional_zones.py  geometries.py  indicators.py  living_buildings.py  object_geometries.py  pages.py  physical_objects.py  service_types.py  services.py  territories.py
urban_api/utils/: dependencies.py  dotenv.py
(+393 files in other folders)
