[tool.poetry]
name = "urban-api"
version = "0.1.0"
description = "This is a Digital Territories Platform API to access and manipulate basic territories data."
authors = ["Babayev Ruslan <rus.babaef@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.2"
asyncio = "^3.4.3"
asyncpg = "^0.29.0"
uvicorn = "^0.29.0"
python-keycloak = "^3.12.0"
pydantic = "^2.7.1"
alembic = "^1.13.1"
loguru = "^0.7.2"
sqlalchemy = {version = "^2.0.29", extras = ["asyncio"]}
cachetools = "^5.3.3"
geoalchemy2 = "^0.15.0"
shapely = "^2.0.4"
pandas = "^2.2.2"

[tool.poetry.scripts]
launch_urban_api = "urban_api.__main__:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
