[tool.poetry]
name = "idu-api"
version = "1.41.3"
description = "This is a Digital Territories Platform API in two versions to access and manipulate basic territories data."
authors = ["Babayev Ruslan <rus.babaef@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.112.0"
asyncio = "^3.4.3"
asyncpg = "^0.30.0"
pydantic = "^2.7.1"
alembic = "^1.13.1"
sqlalchemy = { version = "^2.0.29", extras = ["asyncio"] }
cachetools = "^5.3.3"
geoalchemy2 = "^0.15.0"
pandas = "^2.2.2"
exceptiongroup = "^1.2.1"
fastapi-pagination = "^0.12.26"
python-dotenv = "^1.0.1"
geojson = "^3.1.0"
gunicorn = "^22.0.0"
geojson-pydantic = "^1.1.0"
httpx = "^0.27.0"
pytest-asyncio = "^0.23.8"
numpy = "2.0.1"
sqlakeyset = "^2.0.1721705501"
certifi = "^2024.7.4"
pillow = "^11.0.0"
python-multipart = "^0.0.12"
pyyaml = "^6.0.2"
uvicorn = "0.19.0"
shapely = "^2.0.6"
structlog = "^24.4.0"
prometheus-client = "^0.21.1"
loguru = "^0.7.3"
otteroad = "^0.1.7"
tenacity = "^9.1.2"
aioboto3 = "^15.0.0"

[tool.poetry.scripts]
launch_urban_api = "idu_api.urban_api.__main__:main"
# launch_city_api = "idu_api.city_api.__main__:main" # TODO: add launch option here

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pylint = "^3.3.4"
isort = "^5.13.2"
tqdm = {version = "^4.67.1", extras = ["asyncio"]}
pytest = {version = "^8.3.5", extras = ["asyncio"]}
pytest-cov = "^6.1.1"
aioresponses = "^0.7.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py311']

[tool.pylint.format]
max-line-length = 120
expected-line-ending-format = "LF"
max-locals = 20
max-attributes = 10
max-args = 9
max-positional-arguments = 12
extension-pkg-allow-list = ["networkit"]
ignored-modules = ["alembic.context"]
disable = [
    "duplicate-code",
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
split_on_trailing_comma = true
profile = "black"
